# src/api/router.ts
@@ -6,6 +6,7 @@ import YAML from "yamljs";
 import path from "path";
 import { asyncHandler } from "@nihil_backend/user/src/api/middlewares/asyncHandler";
 import { UserController } from "@nihil_backend/root/user/src/api/controllers/UserController";
+import { UserProfileController } from "@nihil_backend/user/src/api/controllers/UserProfileController";
 
 const router = express.Router();
 const swaggerDocument = YAML.load(
@@ -13,6 +14,8 @@ const swaggerDocument = YAML.load(
 );
 
 const userController = new UserController();
+
+const profileController = new UserProfileController();
 
 // Docs
 router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
@@ -22,5 +25,12 @@ router.get("/users/:id", asyncHandler(userController.getUserById));
 router.post("/users", asyncHandler(userController.createUser));
 router.put("/users/:id", asyncHandler(userController.updateUser));
 router.delete("/users/:id", asyncHandler(userController.deleteUser));
+
+router.get(
+  "/users/:userId/profile",
+  asyncHandler(profileController.getByUserId),
+);
+router.post("/users/:userId/profile", asyncHandler(profileController.create));
+router.put("/users/:userId/profile", asyncHandler(profileController.update));
 
 export default router;
